# xorshiftr-wide

./: Cargo.toml  LICENSE-MIT.txt  README.md
src/: lib.rs
