[package]
name = "xorshiftr-wide"
version = "0.1.0"
authors = ["David McMurray"]
description = "high-throughput non-cryptographic PRNG"
repository = "https://github.com/DavidM603/xorshiftr-wide"
documentation = "https://docs.rs/xorshiftr-wide"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["random", "rng", "prng"]
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]